[gd_scene load_steps=16 format=3 uid="uid://btakpdgldl1nf"]

[ext_resource type="Script" uid="uid://djxliulluwa8u" path="res://Scripts/bus.gd" id="1_8gbba"]
[ext_resource type="Script" uid="uid://dfhe4w70omrjt" path="res://Scripts/camera.gd" id="2_jjvhh"]
[ext_resource type="PackedScene" uid="uid://bsyfu5ncl5mr" path="res://Models/bug_car.blend" id="3_kry3j"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_jjgbg"]
sky_top_color = Color(0.53538877, 0.41999844, 0.3660445, 1)
sky_horizon_color = Color(0.7042364, 0.68088484, 0.36193284, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_bo1nx"]
sky_material = SubResource("ProceduralSkyMaterial_jjgbg")

[sub_resource type="Environment" id="Environment_8gbba"]
background_mode = 2
sky = SubResource("Sky_bo1nx")
tonemap_mode = 4

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_jjgbg"]
dof_blur_far_enabled = true
dof_blur_far_distance = 15.0
dof_blur_far_transition = 55.0
dof_blur_near_enabled = true
dof_blur_near_distance = 15.0
dof_blur_amount = 0.21

[sub_resource type="PlaneMesh" id="PlaneMesh_7u77a"]
size = Vector2(50, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_jjgbg"]
size = Vector3(50, 0.66, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_xlfce"]
size = Vector3(1, 0.5, 2)

[sub_resource type="CylinderMesh" id="CylinderMesh_n5sl8"]
top_radius = 0.25
bottom_radius = 0.25
height = 0.3

[sub_resource type="CylinderMesh" id="CylinderMesh_jjgbg"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_bo1nx"]
points = PackedVector3Array(-0.21418296, -0.94802845, -0.4511285, 0.022731654, 0.9521457, 0.49888662, 0.17148845, 0.9519953, 0.46901843, -0.12593445, 0.9526843, -0.48329136, 0.49966258, -0.95367396, -0.0068888306, -0.3876465, -0.9379602, 0.31565303, -0.48329246, 0.9526857, -0.12593003, 0.37509736, 0.9401282, -0.3298157, 0.17148845, -0.9519953, 0.46901843, 0.14078338, -0.9454848, -0.47957912, 0.4690145, 0.9520113, 0.17149934, -0.3876465, 0.9379602, 0.31565303, -0.48329246, -0.9526857, -0.12593003, -0.18351147, -0.9430759, 0.46469846, 0.40741244, -0.9469937, 0.2889825, 0.37509736, -0.9401282, -0.3298157, -0.39515373, 0.9557608, -0.3055234, -0.479555, 0.9454372, 0.1408799, 0.46469817, 0.94309926, -0.18351227, 0.14078338, 0.9454848, -0.47957912, -0.24320284, 0.9459547, 0.43649116, -0.479555, -0.9454372, 0.1408799, 0.2889712, 0.9469877, 0.4074208, -0.39515373, -0.9557608, -0.3055234, -0.006990604, -0.953641, 0.4996576, 0.49966258, 0.95367396, -0.0068888306, -0.27194828, 0.943071, -0.41921657, 0.46469817, -0.94309926, -0.18351227, -0.12593445, -0.9526843, -0.48329136, 0.31564754, 0.93797344, -0.38765055, 0.4690145, -0.9520113, 0.17149934, 0.40741244, 0.9469937, 0.2889825)

[sub_resource type="PrismMesh" id="PrismMesh_jjgbg"]
left_to_right = 1.0
size = Vector3(5, 2, 5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_jjgbg"]
points = PackedVector3Array(2.3010283, 1.0238096, 2.5386884, -2.4415245, -1, -2.4410467, -2.4415245, -1, 2.4410467, 2.4415245, -1, -2.4410467, 2.5391855, 1.0238096, -2.5386884, 2.4415245, -1, 2.4410467, -2.459634, -0.8807193, -2.5386884, -2.459634, -0.8807193, 2.5386884, 2.5391855, 1.0238096, 2.5386884, 2.3010283, 1.0238096, -2.5386884, -2.5391855, -0.96009994, -2.5386884, -2.5391855, -0.96009994, 2.5386884, -2.0633678, -0.72195804, -2.5386884, -2.0633678, -0.72195804, 2.5386884)

[node name="Main" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
light_color = Color(0.7915614, 0.6628314, 0.5337772, 1)
light_energy = 0.54

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8gbba")
camera_attributes = SubResource("CameraAttributesPractical_jjgbg")

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.21025413, 0)
mesh = SubResource("PlaneMesh_7u77a")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.33, 0)
shape = SubResource("BoxShape3D_jjgbg")

[node name="BusBase" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.21488404, 0)

[node name="Body" type="VehicleBody3D" parent="BusBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("1_8gbba")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BusBase/Body"]
shape = SubResource("BoxShape3D_xlfce")

[node name="Wheel" type="VehicleWheel3D" parent="BusBase/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.67703867, -0.25, 0.7613398)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.05
wheel_radius = 0.25
wheel_rest_length = 0.3
wheel_friction_slip = 5.0
suspension_travel = 0.3
suspension_stiffness = 15.0
damping_compression = 0.3
damping_relaxation = 0.5

[node name="MeshInstance3D" type="MeshInstance3D" parent="BusBase/Body/Wheel"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_n5sl8")

[node name="Wheel2" type="VehicleWheel3D" parent="BusBase/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.68034065, -0.25, 0.7613398)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.05
wheel_radius = 0.25
wheel_rest_length = 0.3
wheel_friction_slip = 5.0
suspension_travel = 0.3
suspension_stiffness = 15.0
damping_compression = 0.3
damping_relaxation = 0.5

[node name="MeshInstance3D" type="MeshInstance3D" parent="BusBase/Body/Wheel2"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_n5sl8")

[node name="Wheel3" type="VehicleWheel3D" parent="BusBase/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.67703867, -0.25, -0.7590939)
use_as_traction = true
wheel_roll_influence = 0.05
wheel_radius = 0.25
wheel_rest_length = 0.3
wheel_friction_slip = 5.0
suspension_travel = 0.3
suspension_stiffness = 15.0
damping_compression = 0.3
damping_relaxation = 0.5

[node name="MeshInstance3D" type="MeshInstance3D" parent="BusBase/Body/Wheel3"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_n5sl8")

[node name="Wheel4" type="VehicleWheel3D" parent="BusBase/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.68034065, -0.25, -0.7590939)
use_as_traction = true
wheel_roll_influence = 0.05
wheel_radius = 0.25
wheel_rest_length = 0.3
wheel_friction_slip = 5.0
suspension_travel = 0.3
suspension_stiffness = 15.0
damping_compression = 0.3
damping_relaxation = 0.5

[node name="MeshInstance3D" type="MeshInstance3D" parent="BusBase/Body/Wheel4"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_n5sl8")

[node name="CameraBase" type="Node3D" parent="BusBase/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0788761, 0)
top_level = true
script = ExtResource("2_jjvhh")

[node name="CameraOffset" type="Node3D" parent="BusBase/Body/CameraBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 7.5, 15)

[node name="Camera3D" type="Camera3D" parent="BusBase/Body/CameraBase/CameraOffset"]
transform = Transform3D(0.70710677, -0.23720008, 0.6661352, 0, 0.94205743, 0.33545157, -0.70710677, -0.23720008, 0.6661352, 0, 0, 0)
fov = 36.2
size = 15.08

[node name="bug_car" parent="BusBase/Body" instance=ExtResource("3_kry3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.043116152, -0.25103787)

[node name="OmniLight3D" type="OmniLight3D" parent="BusBase/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5119176, 1.0629605)
light_color = Color(1, 0.9813334, 0.72, 1)
light_energy = 1.585
omni_range = 10.0
omni_attenuation = 0.578

[node name="Headlights" type="SpotLight3D" parent="BusBase/Body"]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0.35169947, 1.5187165)
light_color = Color(1, 0.9906667, 0.86, 1)
light_energy = 1.248
shadow_enabled = true
spot_range = 31.592
spot_attenuation = 0.37
spot_angle = 66.65
spot_angle_attenuation = 1.1891974

[node name="Obstacle" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.144708, 0.6910516, -1.8181491)
mesh = SubResource("CylinderMesh_jjgbg")

[node name="StaticBody3D" type="StaticBody3D" parent="Obstacle"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Obstacle/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_bo1nx")

[node name="Obstacle2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.4136868, 0.69105184, 5.3157434)
mesh = SubResource("CylinderMesh_jjgbg")

[node name="StaticBody3D" type="StaticBody3D" parent="Obstacle2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Obstacle2/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_bo1nx")

[node name="Obstacle3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.049238, 0.6910523, 4.6096563)
mesh = SubResource("CylinderMesh_jjgbg")

[node name="StaticBody3D" type="StaticBody3D" parent="Obstacle3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Obstacle3/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_bo1nx")

[node name="Ramp" type="MeshInstance3D" parent="."]
transform = Transform3D(0.7183327, 0, 0.6956997, 0, 1, 0, -0.6956997, 0, 0.7183327, -4.2241907, 0.7839296, -2.5513551)
mesh = SubResource("PrismMesh_jjgbg")

[node name="StaticBody3D" type="StaticBody3D" parent="Ramp"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ramp/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_jjgbg")

[editable path="BusBase/Body/bug_car"]
